--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
-    "next": "14.2.4",
+    "next": "^14.2.20",
+    "next-intl": "^3.25.3",
     "react": "^18",
     "react-dom": "^18"
   },
