--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.20",
     "next-intl": "^3.25.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
