worked on r-card and stuffs

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/geoip-lite": "^1.4.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
