--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl": "^3.1.0",
     "@formspree/react": "^2.5.1",
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
